SOV-2451: cross app menu overlap fix (#399)
* chore: cleanup

* fix: apply high z-index to cross-app menu

* chore: add changeset

--- a/apps/frontend/src/app/3_organisms/Header/components/ProductLinks/ProductLinks.module.css
+++ b/apps/frontend/src/app/3_organisms/Header/components/ProductLinks/ProductLinks.module.css
@@ -1,5 +1,5 @@
 .dropdownOrList {
-  @apply block;
+  @apply block z-[999999];
 }
 
 @screen lg {
